--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "https://pages.git.generalassemb.ly/petewins/react-final/",
   "dependencies": {
     "react": "^16.6.3",
+    "react-bootstrap-typeahead": "^3.2.4",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-slick": "^0.23.2"
   },
