--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
+
+#firebase
+.firebase/
+firebase.json
+database.rules.json
+.firebaserc
+.env
